hphp/test/slow/protected_internal/static_method_protected_internal_visibility.php.expectf

Warning: Accessing internal method A::foo in module M1 from module M2 is not allowed in %s on line 8

Fatal error: Call to protected method A::foo() from context 'B' in %s on line 8
